RestaurantManagement/src/objects/Raw_Material__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <formula>Purchase__r.Quantity__c  -  Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>Purchase</label>
        <referenceTo>Purchase__c</referenceTo>
        <relationshipLabel>Raw Materials</relationshipLabel>
        <relationshipName>Raw_Materials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Raw_Name__c</fullName>
        <label>Raw Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <label>Used</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Raw Material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Raw Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>